--- a/style/sections/_projects.scss
+++ b/style/sections/_projects.scss
@@ -3,34 +3,44 @@
   color: $dark-blue-text;
   margin-top: -15rem;
   padding-top: 15rem;
+
   @include respond(tab-land) {
     margin-top: 0;
     padding-top: 5rem;
   }
+
   @include respond(phone) {
     padding-bottom: 1px;
   }
+
   .project-wrapper {
     margin-bottom: 15rem;
+
     @include respond(phone) {
       margin-bottom: 0rem;
     }
+
     .row {
       margin: 0;
       margin-bottom: 8rem;
+
       @include respond(phone) {
         margin-bottom: 4rem;
       }
     }
+
     &__text {
       width: 100%;
       text-align: left;
+
       @include respond(tab-land) {
         margin-bottom: 4.8rem;
       }
+
       @include respond(phone) {
         margin-bottom: 2.5rem;
       }
+
       &-title {
         font-weight: bold;
         margin-bottom: 1.8rem;
@@ -61,6 +71,7 @@
         width: 100%;
         margin: 0;
       }
+
       & .thumbnail {
         border: none;
         box-shadow: 8px 8px 9px 7px rgba(174, 174, 192, 0.4),
@@ -72,12 +83,62 @@
           vertical-align: middle;
           border-radius: 2px;
         }
+
         @include respond(phone) {
           box-shadow: none;
           border: 1px solid #d2d2d2;
           margin-bottom: 3.2rem;
           transform: none;
         }
+      }
+    }
+  }
+
+  /* Interests Photo Grid Section */
+  .interests-wrapper {
+    margin-bottom: 15rem;
+
+    @include respond(phone) {
+      margin-bottom: 0rem;
+    }
+
+    .section-title {
+      font-weight: bold;
+      font-size: $mid-font-size;
+      margin-bottom: 1.8rem;
+      text-align: center;
+
+      @include respond(phone) {
+        font-size: 2rem;
+      }
+    }
+
+    .section-subtitle {
+      font-size: $default-font-size;
+      color: $dark-blue-text;
+      text-align: center;
+      margin-bottom: 1.5rem;
+    }
+
+    .photo-grid {
+      display: grid;
+      gap: 10px;
+      grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .photo-grid__item {
+      width: 100%;
+      aspect-ratio: 1;
+      object-fit: cover;
+      border-radius: 2px;
+      box-shadow: 8px 8px 9px 7px rgba(174, 174, 192, 0.4),
+        -5px -5px 15px 7px #ffffff;
+
+      @include respond(phone) {
+        box-shadow: none;
+        border: 1px solid #d2d2d2;
       }
     }
   }
